unique/nacos/03.nacos-svc.yaml
# 集群间通信
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-headless
  namespace: public-service
  labels:
    app: nacos
spec:
  ports:
    - name: server
      port: 8848
      targetPort: 8848
    - name: rpc
      port: 7848
      targetPort: 7848
  clusterIP: None
  selector:
    app: nacos

# 对外访问
---
apiVersion: v1
kind: Service
metadata:
  name: nacos
  namespace: public-service
  labels:
    app: nacos
spec:
  ports:
    - name: server
      port: 8848
      targetPort: 8848
      nodePort: 30848
  type: NodePort
  selector:
    app: nacos
