unique/nacos/nacos.yaml
# nacos 服务
---
apiVersion: v1
kind: Service
metadata:
  name: nacos
  namespace: public-service
  labels:
    app: nacos
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 7848
      name: rpc
      targetPort: 7848
  clusterIP: None
  selector:
    app: nacos

# nacos 配置
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
  namespace: public-service
spec:
  serviceName: nacos
  replicas: 3
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - nacos
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: nacos
          imagePullPolicy: Always
          image: nacos/nacos-server:1.3.2
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
          ports:
            - containerPort: 8848
              name: client
            - containerPort: 7848
              name: rpc
  selector:
    matchLabels:
      app: nacos
